FlightPath 4.x Changelog
========================

2015-12-23
  Working on multi-degree selection for What-If settings screen.  Added new form element type- cfieldset, for collapsible fieldsets.
  Modified style.css slightly to go with it.
  

2015-12-21
  Working on adding PDO support, replacing the outdated mysql() functions.


2015-12-18
  Have been putting finishing touches on track selections.  Squashing bugs that come up as a result.  Issues with What If track selections.
  Also, made major and track selections look nicer on advising history.  Fixed bug where loading from student search didn't go to What If
  correctly if that was the previous advising.  Also, fixed track selection bug there, too.
  
  
2015-12-14
 Still working on changing track selections.  


2015-12-11
  Working on changing track selections
  

2015-12-9
  Have been working on unassignments in groups, cleaned up a lot of code, and have been making the Degrees page listing
  (for admin data entry) much cleaner and nicer-looking.
  

2015-12-3
  Unassignments appear to be working for bare degree plan and in groups.  Working on making student's multiple degrees
  show up nicer in the Currently Advising box.


2015-12-2
  Worked on unassignments per degree, both on bare degree plan and in groups.


2015-11-30
  Working on split additions within groups.


2015-11-24
  Made numerous changes to get split substitutions working (on the bare degree plan).  They tentatively seem to be working, separated between
  degrees.  Still have a little ways to go, including split subs inside of groups, and making them show in Excess credit correctly.
  

2015-11-20
  Continued working on split subs.  It has been slow, I've had to move various variables into the details_by_degree array, to separate them
  out by what degree they were assigned to.
  

2015-11-18