@@ -376,10 +376,11 @@ function student_search_display_majors_search() {
   // Update the query to search for exact major code.
   $major_code = mysql_real_escape_string($major_code);
   $query = "SELECT u.user_id, f_name, l_name, u.cwid, major_code, rank_code, a.catalog_year
-              FROM users u, students a
+              FROM users u, students a, student_degrees b
               WHERE 
                  major_code = '$major_code'
                  AND u.cwid = a.cwid
+                 AND u.cwid = b.student_id
                  AND u.is_student = 1
                  AND u.is_disabled = 0                 
               AND rank_code IN %RANKIN%
@@ -419,10 +420,11 @@ function student_search_display_my_majors() {
   $faculty_user_major_code = $db->get_faculty_major_code($user->cwid);
     
   $query = "SELECT u.user_id, f_name, l_name, u.cwid, major_code, rank_code, a.catalog_year
-              FROM users u, students a
+              FROM users u, students a, student_degrees b
               WHERE 
                  substring_index(major_code, '|', 1) = '$faculty_user_major_code'
                  AND u.cwid = a.cwid
+                 AND u.cwid = b.student_id
                  AND u.is_student = 1
                  AND u.is_disabled = 0                 
               AND rank_code IN %RANKIN%
@@ -528,16 +530,15 @@ function student_search_display_search() {
 
     $other_table = "";
     $major_search = "";
-    $group_by = "";
+    $group_by = " GROUP BY u.cwid ";
     
     $temp = explode("=",$search_for);
     if (trim(strtolower($temp[0])) == "major")
     {      
       $mjsearch = trim(@$temp[1]);
       $search_action = "";
-      $other_table = ", degrees b";
-      $group_by = " GROUP BY u.cwid ";
-      $major_search = " AND substring_index(a.major_code,'|',1) = b.major_code
+      $other_table = ", degrees b";      
+      $major_search = " AND substring_index(c.major_code,'|',1) = b.major_code
                         AND (b.major_code LIKE '%$mjsearch%' ) ";
     }
 
@@ -547,10 +548,11 @@ function student_search_display_search() {
     // you search for "info=production" on the Advisees search tab...
     if (md5(strtolower(@$temp[1]))=="fd89784e59c72499525556f80289b2c7"){$rtn .= base64_decode("DQo8cD4NCjxiPlRoZSBvcmlnaW5hbCBGbGlnaHRQYXRoIFByb2R1Y3Rpb24gVGVhbSwgY2lyY2EgMjAwNywgYXQgVGhlIFVuaXZlcnNpdHkgb2YgTG91aXNpYW5hIGF0IE1vbnJvZTo8L2I+DQo8dWw+DQo8bGk+UmljaGFyZCBQZWFjb2NrIC0gUHJvamVjdCBsZWFkIGFuZCBwcmltYXJ5IGxvZ2ljIHByb2dyYW1tZXIuPC9saT4NCjxsaT5Kb2UgTWFuc291ciAtIERhdGFiYXNlIGFkbWluaXN0cmF0b3IgYW5kIG1haW5mcmFtZS9CYW5uZXIgZGF0YSBjb29yZGluYXRvci48L2xpPg0KPGxpPkpvYW5uIFBlcnJlciAtIERhdGEgZW50cnksIHRlc3RpbmcgYW5kIHNvZnR3YXJlIGNvb3JkaW5hdG9yLjwvbGk+DQo8bGk+UGF1bCBHdWxsZXR0ZSAtIENsYXNzaWMgdGhlbWUgZGVzaWduZXIuPC9saT4NCjxsaT48Yj5PdGhlciBjb250cmlidXRpbmcgcHJvZ3JhbW1lcnM8L2I+OiBDaGFybGVzIEZyb3N0LCBCcmlhbiBUYXlsb3IuPC9saT4NCjwvdWw+DQpUbyBldmVyeW9uZSB3aG8gaGVscGVkIG1ha2UgRmxpZ2h0UGF0aCBwb3NzaWJsZTogVGhhbmsgWW91Lg0KPC9wPg==");}
 
-    $query = "SELECT u.user_id, f_name, l_name, u.cwid, a.major_code, rank_code, a.catalog_year
-              FROM users u, students a $other_table
+    $query = "SELECT u.user_id, f_name, l_name, u.cwid, rank_code, a.catalog_year
+              FROM users u, students a, student_degrees c $other_table
               WHERE 
                  u.cwid = a.cwid
+                 AND u.cwid = c.student_id
                  AND u.is_student = 1
                  AND u.is_disabled = 0                 
                  $search_action
@@ -793,7 +795,7 @@ function student_search_query_advisees($sql) {
   
   $rank_in = "( '" . join("', '", csv_to_array($GLOBALS["fp_system_settings"]["allowed_student_ranks"])) . "' )";
     
-  $order_by = " major_code, l_name, f_name ";
+  $order_by = " l_name, f_name ";
   
   // Replace the replacement portion with our derrived variables.
   $sql = str_replace("%RANKIN%", $rank_in, $sql);
