@@ -739,8 +739,7 @@ CREATE TABLE `students` (
   `cwid` varchar(30)  ,
   `cumulative_hours` varchar(5)   DEFAULT '',
   `gpa` varchar(5)   DEFAULT '',
-  `rank_code` varchar(5)   DEFAULT '',
-  `major_code` varchar(20)   DEFAULT '',
+  `rank_code` varchar(5)   DEFAULT '',  
   `catalog_year` int(11)   DEFAULT '2006',
   `is_active` tinyint(11)   DEFAULT '0',
   PRIMARY KEY (`cwid`),
